# TCPClient

./: .gitignore  CMakeLists.txt  client_main.cpp  server_main.cpp
Client/: TCPMessengerClient.cpp  TCPMessengerClient.h
Server/: Broker.cpp  Broker.h  Dispatcher.cpp  Dispatcher.h  TCPMessengerServer.cpp
utils/: File.cpp  File.h  FileInterface.cpp  FileInterface.h  MThread.cpp  MThread.h  MultipleTCPSocketListener.cpp  MultipleTCPSocketListener.h  Socket.cpp  Socket.h  TCPMessengerProtocol.h  TCPSocket.cpp  TCPSocket.h  UDPGame.cpp  UDPGame.h  UDPMessenger.cpp  UDPMessenger.h  UDPSocket.cpp  UDPSocket.h
